# raylite

./: CMakeLists.txt  Makefile  README.md
include/: Camera.h  Color.h  Light.h  Material.h  Object.h  PixelData.h  Plane.h  Ray.h  RayTracer.h  Scene.h  Sphere.h  Triangle.h  Vect3.h
src/: Camera.cpp  Object.cpp  Plane.cpp  RayTracer.cpp  Scene.cpp  Sphere.cpp  Triangle.cpp  main.cpp
